--- a/src/Kanbas/Courses/Modules/styles.css
+++ b/src/Kanbas/Courses/Modules/styles.css
@@ -1,11 +1,14 @@
-#wd-modules {
-  position: relative;
-  margin-top: -335px;
-  margin-left: 210px;
-  width: 55vw;
-}
-
 #wd-modules-controls {
     position: relative;
-    margin-bottom: 50px;
+    margin-top: -310px;
+    left: 30px;
+    width: 55vw;
+}
+
+#wd-modules {
+    position: relative;
+    left: 200px;
+    margin-right: 200px;
+    width: 45vw;
+    top: 15px;
 }
