--- a/src/Kanbas/Courses/Home/styles.css
+++ b/src/Kanbas/Courses/Home/styles.css
@@ -1,16 +1,22 @@
 #wd-course-status-container {
   position: absolute;
-  right: 30px;
-  top: 90px;
-
+  right: -320px;
+  top: -320px;
 }
 
-@media (max-width: 800px) {
+#wd-home {
+  position: relative;
+  margin-top: -2px;
+  margin-left: -5px;
+  width: 55vw;
+}
+
+@media (max-width: 768px) {
   #wd-course-status-container {
     display: none;
   }
 }
 
 .move-left{position: relative;
-  left: -50px;
+  left: 50px;
 }
