--- a/src/Kanbas/Courses/Navigation/index.css
+++ b/src/Kanbas/Courses/Navigation/index.css
@@ -4,9 +4,15 @@
   background-color: white;
   border-left: 3px solid black !important;
   margin-left: -3px;
+  z-index: 10;    
 }
 
 #wd-courses-navigation > .list-group-item:not(.active) {
   width: 100px;
   color: rgb(210, 40, 40);
+  z-index: 10;    
+}
+
+.move-left{position: relative;
+  left: 0px;
 }
